--- a/support/cas-server-support-duo/build.gradle
+++ b/support/cas-server-support-duo/build.gradle
@@ -1,6 +1,7 @@
 description = "Apereo CAS DuoSecurity Support"
 dependencies {
     compile libraries.duojava
+    compile libraries.duojavaauth
     compile libraries.jackson
     compile libraries.spring
     compile project(":core:cas-server-core-authentication")
