--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,7 @@ include "support:cas-server-support-yaml-service-registry"
 include "support:cas-server-support-generic"
 include "support:cas-server-support-generic-remote-webflow"
 include "support:cas-server-support-jdbc"
+include "support:cas-server-support-electrofence"
 include "support:cas-server-support-jdbc-monitor"
 include "support:cas-server-support-jpa-service-registry"
 include "support:cas-server-support-jpa-ticket-registry"
