updated pom for bom

--- a/support/cas-server-support-bom/build.gradle
+++ b/support/cas-server-support-bom/build.gradle
@@ -27,6 +27,13 @@ def generateBom() {
                     delegate.url(project.projectIssueUrl)
                 }
 
+                delegate.developers {
+                    delegate.developer {
+                        delegate.id("mmoayyed")
+                        delegate.name("Misagh Moayyed")
+                    }
+                }
+                
                 delegate.scm {
                     delegate.url(project.projectScmUrl)
                     delegate.connection(project.projectScmUrl)
