--- a/support/cas-server-support-reports/build.gradle
+++ b/support/cas-server-support-reports/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     compile project(":core:cas-server-core-monitor")
     compile project(":core:cas-server-core-authentication")
     compileOnly project(":support:cas-server-support-trusted-mfa")
+    compileOnly project(":core:cas-server-core-events")
 
     provided project(":core:cas-server-core-audit")
 }
