Working on events auto-wiring

--- a/gradle.properties
+++ b/gradle.properties
@@ -136,6 +136,7 @@ kryoSerializersVersion=0.38
 
 ehcacheVersion=2.10.2.2.21
 jcacheVersion=1.0.1
+twilioVersion=7.1.0
 
 hsqlVersion=2.3.4
 hikariVersion=2.5.1
