--- a/support/cas-server-support-electrofence/build.gradle
+++ b/support/cas-server-support-electrofence/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile project(":core:cas-server-core-authentication")
     compile project(":core:cas-server-core-events")
     compile libraries.spring
+    compile libraries.twillio
     compile libraries.guava
     compile libraries.springcloud
     compile libraries.springboot
