--- a/gradle.properties
+++ b/gradle.properties
@@ -94,7 +94,7 @@ guavaVersion=19.0
 groovyVersion=2.4.7
 
 springWebmvcPac4jVersion=1.1.2
-pac4jVersion=1.9.2
+pac4jVersion=1.9.3-SNAPSHOT
 dropwizardMetricsVersion=3.1.2
 dropwizardMetricsSpringVersion=3.1.3
 jacksonDatabindVersion=2.8.3
