--- a/cas-server-webapp-validation/build.gradle
+++ b/cas-server-webapp-validation/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   compile project(':cas-server-core-services')
   compile project(':cas-server-core-validation')
   compile project(':cas-server-core-tickets')
+  compile project(':cas-server-core')
   compile group: 'org.springframework', name: 'spring-context', version:springVersion
   runtime(group: 'org.hibernate', name: 'hibernate-validator', version:hibernateValidatorVersion) {
     exclude(module: 'slf4j-api')
