--- a/gradle.properties
+++ b/gradle.properties
@@ -152,6 +152,7 @@ jsonSmartVersion=1.3.1
 
 opensamlVersion=3.2.0
 idpVersion=3.2.1
+idpLibertyIdwsConsumerVersion=1.0.0
 xmlapisVersion=1.4.01
 bouncyCastleVersion=1.55
 shibbolethUtilJavaSupport=7.2.0
