Added support for mongoldb for gauth

--- a/settings.gradle
+++ b/settings.gradle
@@ -87,6 +87,7 @@ include "support:cas-server-support-pac4j-webflow"
 include "support:cas-server-support-mongo"
 include "support:cas-server-support-gauth"
 include "support:cas-server-support-gauth-jpa"
+include "support:cas-server-support-gauth-mongo"
 include "support:cas-server-support-couchbase-core"
 include "support:cas-server-support-couchbase-service-registry"
 include "support:cas-server-support-couchbase-ticket-registry"
